--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/settings"
+        android:orderInCategory="1"
+        android:title="@string/item_settgs"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/about"
+        android:orderInCategory="2"
+        android:title="@string/item_about"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/site"
+        android:orderInCategory="3"
+        android:title="@string/item_site"
+        app:showAsAction="never" />
 </menu>
