--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -12,7 +12,7 @@
         android:onClick="onAbout"
         android:orderInCategory="2"
         android:title="@string/item_about"
-        app:showAsAction="always|never|ifRoom|collapseActionView|withText" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/site"
         android:orderInCategory="3"
